<resources>
    <string name="app_name">Assignment 02</string>
    <string name="movie_rec">Fav Movies</string>
    <string name="register_movie">Register Movie</string>
    <string name="display_movies">Display Movies</string>
    <string name="favourites">Favourites</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="developed_by_shenal">Developed by Shenal</string>
    <string name="title_of_film">Title of Film</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="actors_actresses">Actors/Actresses</string>
    <string name="rating">Rating</string>
    <string name="review">Review</string>
    <string name="save">Save</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="update">Update</string>
    <string name="not_favourite">Not Favourite</string>
    <string name="favourite">Favourite</string>
    <string name="search_movie">Search Movie...</string>
    <string name="find_movie_in_imdb">Find movie in IMDB</string>
    <string name="image_of_selected_movie">Image of Selected Movie</string>
    <string name="search_icon">Search Icon</string>
</resources>
