<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/por_start_page"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/megrim"
        android:text="@string/movie_rec"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRegMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:width="230dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/register_movie"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <Button
        android:id="@+id/btnDisplayMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="230dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/display_movies"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegMovie" />

    <Button
        android:id="@+id/btnFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="230dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/favourites"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDisplayMovies" />

    <Button
        android:id="@+id/btnEditMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="230dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/edit_movies"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFavourites" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="230dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditMovies" />

    <Button
        android:id="@+id/btnRatings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="230dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/ratings"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <TextView
        android:id="@+id/txtLicence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/developed_by_shenal"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>