<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portrait_bg"
    tools:context=".RegMovieActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/title_of_film"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/rounded_corners_edittext"
        android:textColor="#fff"
        android:textColorHint="#e6e6e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_year"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/year"
        android:inputType="number"
        android:maxLength="4"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/rounded_corners_edittext"
        android:textColor="#fff"
        android:textColorHint="#e6e6e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_director"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/director"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/rounded_corners_edittext"
        android:textColor="#fff"
        android:textColorHint="#e6e6e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_year"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_actors"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/actors_actresses"
        android:inputType="textPersonName"
        android:maxLines="3"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/rounded_corners_edittext"
        android:textColor="#fff"
        android:textColorHint="#e6e6e6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_director"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_rating"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:background="@drawable/rounded_corners_edittext"
        android:textColor="#fff"
        android:textColorHint="#e6e6e6"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/rating"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_actors"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/input_review"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="10dp"
        android:background="@drawable/rounded_corners_edittext"
        android:textColor="#fff"
        android:textColorHint="#e6e6e6"
        android:fontFamily="@font/nunito_bold"
        android:hint="@string/review"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_rating"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:background="@drawable/rounded_corners"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>